[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "gdal-windows-whl-flatlinks"
version = "0.1.0"
description = "A simple webpage with links to cgohlke/geospatial-wheels Windows GIS wheelfiles"
readme = "README.md"
authors = [
  { name = "Nathan McDougall", email = "nathan.j.mcdougall@gmail.com" },
]
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "httpx>=0.28.1",
]

[dependency-groups]
dev = [
  "pyproject-fmt>=2.5.1",
  "ruff>=0.9.8",
]
test = [
  "pytest>=8.3.4",
]

[tool.ruff]
line-length = 88

src = [ "src" ]
lint.select = [ "A", "ANN", "C4", "E4", "E7", "E9", "EM", "F", "FURB", "I", "PLE", "PLR", "PT", "RUF", "SIM", "UP" ]
lint.ignore = [ "PLR2004", "SIM108" ]

[tool.pyproject-fmt]
keep_full_version = true

[tool.pytest.ini_options]
testpaths = [ "tests" ]
addopts = [ "--import-mode=importlib" ]
filterwarnings = [ "error" ]

[tool.uv]
default-groups = [ "test", "dev" ]
