[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "geospatial-wheels-index"
version = "0.1.0"
description = "A PEP503 compliant package index for cgohlke/geospatial-wheels Windows GIS wheel files"
readme = "README.md"
authors = [
  { name = "Nathan McDougall", email = "nathan.j.mcdougall@gmail.com" },
]
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "gdal>=3.10.1",
  "httpx>=0.28.1",
]

[dependency-groups]
dev = [
  "pyproject-fmt>=2.5.1",
  "ruff>=0.9.8",
]
test = [
  "pytest>=8.3.4",
]

[tool.ruff]
line-length = 88

src = [ "src" ]
lint.select = [ "A", "ANN", "C4", "E4", "E7", "E9", "EM", "F", "FURB", "I", "PLE", "PLR", "PT", "RUF", "SIM", "UP" ]
lint.ignore = [ "PLR2004", "SIM108" ]

[tool.pyproject-fmt]
keep_full_version = true

[tool.pytest.ini_options]
testpaths = [ "tests" ]
addopts = [ "--import-mode=importlib" ]
filterwarnings = [ "error" ]

[tool.uv]
default-groups = [ "test", "dev" ]

[tool.uv.sources]
gdal = [
  { index = "gdal-wheels", marker = "sys_platform == 'linux'" },
  { index = "geospatial_wheels", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "geospatial_wheels"
url = "https://nathanjmcdougall.github.io/geospatial-wheels-index/"
explicit = true

[[tool.uv.index]]
name = "gdal-wheels"
url = "https://gitlab.com/api/v4/projects/61637378/packages/pypi/simple"
explicit = true
